{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 1014,
  "lineage": "79c2b540-6779-15f9-9e96-dc874da380bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0932936aa1d507cd8",
            "arn": "arn:aws:ec2:eu-west-1:363822040081:elastic-ip/eipalloc-0932936aa1d507cd8",
            "domain": "vpc",
            "id": "eipalloc-0932936aa1d507cd8",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-200-137-119.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.137.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-PA"
            },
            "tags_all": {
              "Name": "eip-PA"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:internet-gateway/igw-0b8c6241712d37661",
            "id": "igw-0b8c6241712d37661",
            "owner_id": "363822040081",
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:loadbalancer/app/PA-alb/a08fee78b81635b3",
            "arn_suffix": "app/PA-alb/a08fee78b81635b3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "PA-alb-2104211416.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:loadbalancer/app/PA-alb/a08fee78b81635b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PA-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f07bca3561a536ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041b2b71b2a1716dc"
              },
              {
                "subnet_id": "subnet-05e726a9d90a6615d"
              },
              {
                "subnet_id": "subnet-09318e95514b388f1"
              }
            ],
            "subnets": [
              "subnet-041b2b71b2a1716dc",
              "subnet-05e726a9d90a6615d",
              "subnet-09318e95514b388f1"
            ],
            "tags": {
              "Name": "PA-alb"
            },
            "tags_all": {
              "Name": "PA-alb"
            },
            "vpc_id": "vpc-026645f74f3903871",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:listener/app/PA-alb/a08fee78b81635b3/c160f64b5932b743",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:listener/app/PA-alb/a08fee78b81635b3/c160f64b5932b743",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:loadbalancer/app/PA-alb/a08fee78b81635b3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:listener/app/PA-alb/a08fee78b81635b3/b3cf8a3f795462eb",
            "certificate_arn": "arn:aws:acm:eu-west-1:363822040081:certificate/141fcff5-3bcc-4b46-8bc4-3c4698f712e2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:targetgroup/PA-alb-tg/48a9cc8fb7ce38bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:listener/app/PA-alb/a08fee78b81635b3/b3cf8a3f795462eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:loadbalancer/app/PA-alb/a08fee78b81635b3",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:targetgroup/PA-alb-tg/48a9cc8fb7ce38bd",
            "arn_suffix": "targetgroup/PA-alb-tg/48a9cc8fb7ce38bd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363822040081:targetgroup/PA-alb-tg/48a9cc8fb7ce38bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "PA-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "PA-alb-tg"
            },
            "tags_all": {
              "Name": "PA-alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0932936aa1d507cd8",
            "association_id": "eipassoc-053434a40df218e5f",
            "connectivity_type": "public",
            "id": "nat-0b4123bdbb0bf508d",
            "network_interface_id": "eni-0bf059669f91b72fb",
            "private_ip": "10.0.10.37",
            "public_ip": "18.200.137.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041b2b71b2a1716dc",
            "tags": {
              "Name": "PA-tf-ngw"
            },
            "tags_all": {
              "Name": "PA-tf-ngw"
            }
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:route-table/rtb-0e23d5e759d2795a8",
            "id": "rtb-0e23d5e759d2795a8",
            "owner_id": "363822040081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4123bdbb0bf508d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PA-tf-route-table-private"
            },
            "tags_all": {
              "Name": "PA-tf-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-026645f74f3903871"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:route-table/rtb-0726bdadb447cd603",
            "id": "rtb-0726bdadb447cd603",
            "owner_id": "363822040081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c6241712d37661",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PA-tf-route-table-public"
            },
            "tags_all": {
              "Name": "PA-tf-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-026645f74f3903871"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e23776f79c9cd181",
            "route_table_id": "rtb-0e23d5e759d2795a8",
            "subnet_id": "subnet-0086c9e7109f81e94"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc8b3c3060cc4a0",
            "route_table_id": "rtb-0e23d5e759d2795a8",
            "subnet_id": "subnet-0362300cbbc022850"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0822921426d698482",
            "route_table_id": "rtb-0e23d5e759d2795a8",
            "subnet_id": "subnet-0a232307364bf9f50"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2f6591f948d7bb4",
            "route_table_id": "rtb-0726bdadb447cd603",
            "subnet_id": "subnet-041b2b71b2a1716dc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a78aeae9fc39baf0",
            "route_table_id": "rtb-0726bdadb447cd603",
            "subnet_id": "subnet-05e726a9d90a6615d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd2a6766e7eec59",
            "route_table_id": "rtb-0726bdadb447cd603",
            "subnet_id": "subnet-09318e95514b388f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:security-group/sg-0f14205566d29d79e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f14205566d29d79e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240725085344816800000003",
            "name_prefix": "terraform-",
            "owner_id": "363822040081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-lb-sg"
            },
            "tags_all": {
              "Name": "app-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-026645f74f3903871"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:security-group/sg-07eda1e7b6930ecb6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07eda1e7b6930ecb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240725085344818900000004",
            "name_prefix": "terraform-",
            "owner_id": "363822040081",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-026645f74f3903871"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:subnet/subnet-0086c9e7109f81e94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0086c9e7109f81e94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363822040081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PA-tf-subnet-private-0"
            },
            "tags_all": {
              "Name": "PA-tf-subnet-private-0"
            },
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:subnet/subnet-0362300cbbc022850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0362300cbbc022850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363822040081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PA-tf-subnet-private-1"
            },
            "tags_all": {
              "Name": "PA-tf-subnet-private-1"
            },
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:subnet/subnet-0a232307364bf9f50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a232307364bf9f50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363822040081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PA-tf-subnet-private-2"
            },
            "tags_all": {
              "Name": "PA-tf-subnet-private-2"
            },
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:subnet/subnet-041b2b71b2a1716dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041b2b71b2a1716dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363822040081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PA-tf-subnet-public-0"
            },
            "tags_all": {
              "Name": "PA-tf-subnet-public-0"
            },
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:subnet/subnet-05e726a9d90a6615d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e726a9d90a6615d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363822040081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PA-tf-subnet-public-1"
            },
            "tags_all": {
              "Name": "PA-tf-subnet-public-1"
            },
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:subnet/subnet-09318e95514b388f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09318e95514b388f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363822040081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PA-tf-subnet-public-2"
            },
            "tags_all": {
              "Name": "PA-tf-subnet-public-2"
            },
            "vpc_id": "vpc-026645f74f3903871"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363822040081:vpc/vpc-026645f74f3903871",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0319ace9593aef672",
            "default_route_table_id": "rtb-0f8f8028d210a7c2c",
            "default_security_group_id": "sg-0f07bca3561a536ae",
            "dhcp_options_id": "dopt-0aff507926e5a322b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026645f74f3903871",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8f8028d210a7c2c",
            "owner_id": "363822040081",
            "tags": {
              "Name": "PA-tf-vpc-main"
            },
            "tags_all": {
              "Name": "PA-tf-vpc-main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}